<resources>
    <string name="app_name">FitnessUnibs</string>
    <string name="salva">Salva</string>
    <string name="ripristina">Ripristina</string>
    <string name="stringaBenvenuto">Benvenuto nella schermata home, \n</string>
    <string name="testoBottoneAttivita">Allenati!!</string>
    <string name="testoStatSquat">Squot complessivamente compiuti</string>
    <string name="testoStatAddominali">Addominali complessivamente compiuti: </string>
    <string name="testoStatFlessioni">Flessioni complessivamente compiuti: </string>
    <string name="impostazioniMenu">Impostazioni</string>
    <string name="aggiorna">Aggiorna</string>
    <string name="strSceltaAttivita">Scegliere una attività proposta</string>
    <string name="addominali">Addominali</string>
    <string name="squat">Squat</string>
    <string name="flessioni">Flessioni</string>
    <string name="cambiaNomeUtente">Modifica dati utente</string>
    <string name="NomeUtente">Nome utente: </string>
    <string name="fileAccount">fileAccount.txt</string>
    <string name="aiutoInserimentoNuovoNome">Nuovo nome utente</string>
    <string name="annulla">Annulla</string>
    <string name="conferma">Conferma</string>
    <string name="immagine">ImmagineProfilo</string>
    <string name="filePrimoAccesso">primo.txt</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="modificaLingua">Modifica lingua</string>
    <string name="riconoscimenti">Riconoscimenti</string>
    <string name="data">Data</string>
    <string name="tipoEsercizio">Tipo di esercizio</string>
    <string name="ripetizoniAttivita">Ripetizioni</string>
    <string name="durata">Durata</string>
    <string name="storico">Storico</string>
    <string name="partenza">partenza</string>
    <string name="pausa">pausa</string>
    <string name="tornaHome">tornaHoma</string>
    <string name="abbandona">abbandona</string>
    <string name="personalizza">personalizza</string>
    <string name="tornaSceltaAttivita">Torna agli Esercizi</string>
    <string name="uscitaScura">Sei sicuro di voler uscire?</string>
</resources>
