<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.unibs.ing.fp.fitnessunibs.Home">

    <TextView
        android:id="@+id/testoBenvenuto"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/stringaBenvenuto"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/immagineProfilo"
        android:layout_width="282dp"
        android:layout_height="152dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/immagine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testoBenvenuto"
        app:layout_constraintVertical_bias="0.009"
        app:srcCompat="@drawable/logoapp"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/bottoneAttivita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:elevation="3dp"
        android:onClick="onClickAllenati"
        android:text="@string/testoBottoneAttivita"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/immagineProfilo"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/statSquat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/testoStatSquat"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statAddominali" />

    <TextView
        android:id="@+id/statAddominali"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/testoStatAddominali"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statFlessioni" />

    <TextView
        android:id="@+id/statFlessioni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center_horizontal"
        android:text="@string/testoStatFlessioni"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottoneAttivita"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/bottoneStorico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storico"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="291dp" />
</android.support.constraint.ConstraintLayout>
