<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.unibs.ing.fp.fitnessunibs.Impostazioni"
    android:orientation="vertical">

    <Button
        android:id="@+id/bottoneCambiaNomeUtente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/piccola"
        android:contentDescription="@string/cambiaNomeUtente"
        android:onClick="onClickCambiaNomeUtente"
        android:text="@string/cambiaNomeUtente"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="41dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/piccola"
        android:onClick="onClickCambiaLingua"
        android:text="@string/modificaLingua" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/piccola"
        android:onClick="onClickRiconoscimenti"
        android:text="@string/riconoscimenti" />

</LinearLayout>
