<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="it.unibs.ing.fp.fitnessunibs.Storico"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dataStoricoListView"
            android:layout_width="33dp"
            android:layout_height="30dp"
            android:layout_weight="0.05"
            android:gravity="center_vertical"
            android:text="@string/data"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/nomeEsercizioStoricoListView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.09"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/tipoEsercizio"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <TextView
            android:id="@+id/ripetizioniStoricoListView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/ripetizoniAttivita"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <TextView
            android:id="@+id/durataStoricoListView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.04"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/durata"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
    </LinearLayout>

    <ListView
        android:id="@+id/listaStoricoFlessioni"
        style="@style/Widget.AppCompat.ListView"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_marginTop="@dimen/nano" />

</LinearLayout>