<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.unibs.ing.fp.fitnessunibs.Flessioni">


    <Button
        android:id="@+id/bottonePartenza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:onClick="partenza"
        android:text="@string/partenza"
        android:layout_above="@+id/bottoneTorna"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp" />

    <Button
        android:id="@+id/bottonePausa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="47dp"
        android:layout_marginStart="47dp"
        android:elevation="0dp"
        android:onClick="pausa"
        android:text="@string/pausa"
        android:layout_below="@+id/bottoneTocchi"
        android:layout_toRightOf="@+id/cronometro"
        android:layout_toEndOf="@+id/cronometro" />

    <Button
        android:id="@+id/bottoneTocchi"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/bottonePartenza" />

    <Button
        android:id="@+id/bottoneTorna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp"
        android:layout_toLeftOf="@+id/imageButton2"
        android:layout_toStartOf="@+id/imageButton2"
        android:elevation="0dp"
        android:onClick="tornaSceltaAttivita"
        android:text="@string/tornaSceltaAttivita" />

    <TextView
        android:id="@+id/testoNumero"
        android:layout_width="3000dp"
        android:layout_height="100dp"
        android:layout_above="@+id/testoCount"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="65sp" />

    <TextView
        android:id="@+id/testoCount"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/bottoneTocchi"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="75sp" />

    <Chronometer
        android:id="@+id/cronometro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/testoCount"
        android:layout_centerHorizontal="true"
        android:inputType="time"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="30sp" />

    <Button
        android:id="@+id/bottoneAbbandona"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="abbandona"
        android:text="@string/abbandona"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/cronometro"
        android:layout_toEndOf="@+id/cronometro" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bottoneTorna"
        android:layout_alignLeft="@+id/cronometro"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/cronometro"
        android:layout_below="@+id/bottonePausa"
        android:adjustViewBounds="false"
        android:onClick="tornaHome"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/immagine_home" />

    <Chronometer
        android:id="@+id/chronometer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bottonePartenza"
        android:layout_alignStart="@+id/bottonePartenza"
        android:layout_below="@+id/bottoneAbbandona" />

</RelativeLayout>





